# atomizer

./: .gitignore  LICENSE  README.md  generate_results.ps1  generate_results.sh  init.sh  pyproject.toml
data/image/: .gitignore
data/mesh/: .gitignore  ankle.stl  calibration_cube.stl  car.stl  city_final.stl  cubic.stl  dome.stl  opposite_curvature_final_90.stl  triangle_24.stl  tubes.stl
data/param/: ankle.json  calibration_cube.json  car.json  city_final.json  cubic.json  dome.json  opposite_curvature_final_90.json  pisa_tower.json  triangle_24.json  tubes.json
data/toolpath/: .gitignore
experiment/: experiment_basis3.py  experiment_set.py  experiment_toolpath3.py  experiment_triphasor3.py
src/atom/: basis3.py  bvh.py  color.py  cone.py  direction.py  drawer3.py  fff3.py  frame3.py  grid2.py  grid3.py  limits.py  line.py  math.py  phasor3.py  random.py  set.py  solid3.py  stack.py  toolpath3.py  transform3.py  triphasor3.py
tools/: align_atoms.py  atomize.py  bpn_to_sdf.py  cl_fr_dw.py  compute_tangents.py  compute_tool_orientations.py  extract_explicit_atoms.py  obj_to_bpn.py  order_atoms.py  process_for_atomizer.py  sdf_df_to_layers.py  smooth_toolpath_point.py  tesselate_toolpath_orientations.py  toolpath_to_ply.py  visualize_bases.py  visualize_bpn.py  visualize_bpn_df.py  visualize_bpn_layers.py  visualize_bpn_sdf.py  visualize_explicit_atoms.py  visualize_implicit_atoms.py  visualize_toolpath.py
